Bug 748117 - Make sure http channel is pending in OnStartRequest & OnDataAvailable r=jduell